* Fixes an overview with the 64*64 icon * Updates the changelog * Sets an absolute font size for .mini-level * Puts full URLs for the icon

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 .mini-level { position: absolute;
               left: -1.667em;
               top: 1ex;
-              font-size: smaller;
+              font-size: 10px;
               color: #FFC;
               text-shadow: 0 1px 0 black;
               background: #D31;
